# ovbase

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  base.c  base.h  base_test.c  build.bash  emscripten-build.bash  error_win32.c  error_win32.h  hmap.inc.c  setup-llvm-mingw.bash  setup-llvm-mingw.sh  test.h  threads.h  wasi-build.bash
.github/workflows/: emscripten.yml  llvm-mingw.yml  test.yml  ubuntu.yml  wasi.yml  windows-llvm-mingw.yml  windows-msys2.yml
3rd/: acutest.h
3rd/hashmap/: hashmap.c  hashmap.h
3rd/threads/: threads.h  threads_posix.h  threads_win32.h
include/: base.h  ovarray.h  ovbase.h  ovbase_config.h  ovbase_config.h.in  ovcyrb64.h  ovhashmap.h  ovmo.h  ovnum.h  ovprintf.h  ovprintf_ex.h  ovrand.h  ovsort.h  ovtest.h  ovthreads.h  ovutf.h  test.h  threads.h
src/: CMakeLists.txt  array.c  array.inc.c  array2.c  array2_test.c  array_test.c  base.c  base.h  base_test.c  config.h.in  error.c  error.h  error.inc.c  error2.c  error2_report.c  error2_test.c  error_en.c  error_i18n.c  error_jp.c  error_report.c  error_test.c  hashmap.c  hmap.c  hmap.inc.c  hmap_test.c  mem.c  mem.h  mem_aligned.c  mem_aligned_test.c  mem_test.c  output.c  output.h  output_default.c  ovbase.c  ovbase_test.c  ovsort.c  ovsort_old.c  ovsort_test.c  ovthreads.c  ovthreads_test.c  (+5 more)
src/hashmap/: clear.c  common.c  common.h  count.c  create_dynamic.c  create_static.c  delete.c  destroy.c  get.c  iter.c  set.c  test.c
src/hmap/: clear.c  count.c  delete.c  free.c  get.c  hmap.h  iter.c  new_dynamic.c  new_static.c  scan.c  set.c  test.c
src/mo/: char.c  mo.c  mo_printf_ex.c  str.c  test.c  wchar.c  win32.c  wstr.c
src/mo/test/: en_US.mo  en_US.po  test.c  test.pot
src/mo/test_win32/: en.po  ja.po  test.c  test.pot  test.rc  zh_CN.po
src/num/char/: atoi.c  def.h  ftoa.c  test.c  utoa.c
src/num/char16/: atof.c  def.h  itoa.c  test.c
src/num/char32/: atou.c  def.h  test.c
src/num/inc/: atof.inc.c  atoi.inc.c  atou.inc.c  def.h  ftoa.inc.c  itoa.inc.c  test.inc.c  utoa.inc.c
src/num/wchar/: def.h  test.c
src/printf/: char.c  char2codepoint.c  char2codepoint_test.c  char2wchar.c  char2wchar_test.c  char_test.c  impl.inc.c  nanoprintf.h  test.inc.c  to_codepoint.inc.c  util.h  wchar.c  wchar2char.c  wchar2char_test.c  wchar2codepoint.c  wchar2codepoint_test.c  wchar_test.c  wnanoprintf.h
src/printf_ex/: char.c  char2wchar.c  char2wchar_test.c  char_test.c  impl.inc.c  test.c  test.inc.c  wchar.c  wchar2char.c  wchar2char_test.c  wchar_test.c
src/str/: atoi64_.c  atoi_.c  atou64_.c  atou_.c  cat_.c  cat_m_.c  cpy_.c  cpy_m_.c  itoa64_.c  itoa_.c  ncat_.c  ncpy_.c  replace_all_.c  sprintf_.c  str.h  str_.c  test.c  to_str_.c  utoa64_.c  utoa_.c
src/utf/: codepoint_char16.c  codepoint_char16.h  codepoint_char32.c  codepoint_char32.h  codepoint_sjis.c  codepoint_sjis.h  codepoint_utf8.c  codepoint_utf8.h  codepoint_wchar.c  codepoint_wchar.h  common.c  common.h  sjis.c  test.c  to_char16.c  to_char32.c  to_wchar.c  u2w.c  utf.c  utf8_from_char16.c  utf8_from_char32.c  utf8_from_sjis.c  utf8_from_wchar.c  w2u.c
src/wstr/: atoi64_.c  atoi_.c  atou64_.c  atou_.c  cat_.c  cat_m_.c  cpy_.c  cpy_m_.c  itoa64_.c  itoa_.c  ncat_.c  ncpy_.c  replace_all_.c  sprintf_.c  str_.c  test.c  to_wstr_.c  utoa64_.c  utoa_.c  wstr.h
